# CrossMake

./: .gitignore  .gitkeep  CMakeLists.txt  README.md
scripts/unix/: run_setup.sh
scripts/windows/: run_setup.bat
source/: main.cpp
